Contact responsive - WIP

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,6 +4,12 @@
 @import 'typography';
 
 @import 'components/hero';
+@import 'components/about';
+@import 'components/contact';
+@import 'components/form';
+@import 'components/input';
+@import 'components/confirmButton';
+@import 'components/Network';
 
 
 
