--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -41,6 +41,10 @@
         padding-bottom: 5rem;
     }
 
+    &_logo {
+        display: block;
+    }
+
     &_logo svg {
         display: block;
         height: 30rem;
