--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,9 +7,9 @@
 @import 'components/about';
 @import 'components/contact';
 @import 'components/form';
-@import 'components/input';
 @import 'components/confirmButton';
-@import 'components/Network';
+@import 'components/network';
+
 
 
 
