--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -10,7 +10,7 @@
 
     &_name, 
     &_email,
-    &_text {
+    &_message {
         background-color: transparent;
         width: 100%;
         border: none;
@@ -29,8 +29,18 @@
         padding-bottom: 1rem;
     }
 
-    &_text {
+    &_message {
         resize: none;
         text-transform: lowercase;
     }
+
+    &_button {
+        width: 100%;
+    background-color: transparent;
+    border: 1px solid $fonts;
+    padding: .5rem 0;
+    margin-top: 1.5rem;
+    margin-bottom: .3rem;
+    }
 }
+
