Prismic datas - ok

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -15,6 +15,7 @@
         width: 100%;
         border: none;
         border-bottom: 1px solid $fonts;
+        border-radius: 0;
 
         &:focus {
             outline: none;
